2009-10-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Document "linetype <n>" option of linecolor and
	textcolor.

2009-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/luz.trm term/lua/gnuplot-tikz.lua: Remove conditional tests
	for gnuplot version 4.3.  We're past that now.

2009-10-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c (save_fillstyle):  Repair missing brackets in if/else.

2009-10-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c src/axis.c src/term.c:  Replace in-line warnings sent
	to stderr by instead calling int_warn();

2009-10-24  David Marx  <itsdmarx@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp:  The pieces of a concatenated string
	literal must be wrapped in wxT() to satisfy the Sun Studio CC compiler.
	Bug #2883574

2009-10-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (make_palette): Remove useless warning message.

	* src/internal.c (f_power):  Check for integer overflow from i**j and
	return a real value (well, actually a complex value) if it is needed.
	Bug #2881789

2009-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): The mechanism for flagging "lc variable"
	was not being triggered for plot types VECTOR, CIRCLES, BOXES.
	Bug fix

2009-10-22  David Marx  <itsdmarx@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp:  _T() macro has been deprecated in favor
	of wxT().
	Bug #2883574

2009-10-18  Ethan A Merritt  <merritt@u.washington.edu>

	* VERSION FAQ.pdf src/version.c
	config/makefile.mgw configure.in docs/doc2texi.el docs/titlepag.tex

	Bump version of CVS development tree to 4.5

2009-10-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c: Initialize each new surface in a 3d dataset directly
	from the first surface.
	Bug #2876167

2009-10-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.585
